# odatalite

./: .cproject  .gitattributes  .gitignore  .project  CODING-STANDARDS.txt  Makefile.am  README  TODO  autogen  configure.ac
doc/: features.txt
etc/: redfish_passwd
etc/pam.d/: redfish
etc/phit/: plugins.conf
pkg/: Makefile-bins.inc  Makefile-compileopts.inc  Makefile-csdl2c.inc  Makefile-fcgi-threaded-hello-world.inc  Makefile-fcgi-zmq-hello-world.inc  Makefile-fcgiauth.inc  Makefile-fcgiodata-async.inc  Makefile-fcgiodata.inc  Makefile-fcgitest.inc  Makefile-functions.inc  Makefile-json.inc  Makefile-libasyncgadgetprovider.inc  Makefile-libbase.inc  Makefile-libcheckprovider.inc  Makefile-libclient.inc  Makefile-libechoplugin.inc  Makefile-libfrogprovider.inc  Makefile-libgadgetprovider.inc  Makefile-libheapprovider.inc  Makefile-libhelloplugin.inc  Makefile-libmetadataprovider.inc  Makefile-libodata.inc  Makefile-libodataplugin.inc  Makefile-libpingplugin.inc  Makefile-libprovider-required.inc  Makefile-librootprovider.inc  Makefile-libwidgetprovider.inc  Makefile-odata-fastcgi.inc  Makefile-olcli.inc  Makefile-phitcli.inc  Makefile-phitd.inc  Makefile-testcsdl.inc  Makefile-tools.inc  pc_template.in
pkg/m4/: setup-versioning-variables.m4  soname-header.m4
rootfs/bindir/: run.phitd
rootfs/systemdsystemunitdir/: phitd.service
scripts/: autogen  build.bat  clean.bat  cleanup.bat
share/: odata.service
share/apache/: 01-load-modules.conf  fcgi-threaded-hello-world.conf  fcgi-threaded-hello-world.service  fcgi-threaded-hello-world.socket  fcgi-zmq-hello-world.conf  fcgi-zmq-hello-world.service  fcgi-zmq-hello-world.socket  fcgiauth.conf  fcgiauth.service  fcgiauth.socket  fcgiodata-async.conf  fcgiodata-async.service  fcgiodata.conf  fcgiodata.service  fcgiodata.socket  fcgitest.conf  fcgitest.service  load-proxy.conf  odata.conf  odata.service
share/phit/: phitd.service
src/: common.h  config.h.in  phit.h  phitfeatures.h  winconfig.h
src/RedfishSchema/: AccountService.0.94.0.metadata  Chassis.0.94.0.metadata  ComputerSystem.0.94.0.metadata  DMTFExtensions.0.94.0.metadata  Errors.0.94.0.metadata  EthernetNetworkInterface.0.94.0.metadata  Event.0.94.0.metadata  EventService.0.94.0.metadata  Firmware.0.94.0.metadata  IPAddresses.0.94.0.metadata  ListenerDestination.0.94.0.metadata  LogEntry.0.94.0.metadata  LogService.0.94.0.metadata  Manager.0.94.0.metadata  Manager.0.96.0.metadata  ManagerAccount.0.94.0.metadata  ManagerNetworkService.0.94.0.metadata  Messages.0.94.0.metadata  Messages.0.96.0.metadata  MiscMetrics.0.94.0.metadata  PowerMetrics.0.94.0.metadata  Privileges.0.96.0.metadata  Processor.0.96.0.metadata  Redundancy.0.94.0.metadata  Resource.0.94.0.metadata  SerialInterface.0.94.0.metadata  ServiceRoot.0.94.0.metadata  ServiceRoot.c  Session.0.94.0.metadata  SimpleStorage.0.94.0.metadata  Task.0.94.0.metadata  TaskService.0.94.0.metadata  ThermalMetrics.0.94.0.metadata  VirtualMedia.0.94.0.metadata
src/RedfishSchema/Chipwise/: Chipwise.CustomTypes.metadata
src/RedfishSchema/Contoso/: Contoso.CustomTypes.metadata
src/RedfishSchema/Service/: Service.Annotations.metadata  Service.metadata
src/base/: addr.c  addr.h  addrclient.c  alloc.c  alloc.h  allocprint.c  array.c  array.h  auth.c  auth.h  authclient.c  authserver.c  base64.h  base64dec.c  base64enc.c  buf.c  buf.h  chars.c  chars.h  cleanup.c  cleanup.h  conffile.c  conffile.h  datetime.c  datetime.h  datetimetimestamp.c  dump.c  dump.h  env.c  env.h  err.c  err.h  file.c  file.h  find.c  find.h  format.c  format.h  getopt.c  getopt.h  (+52 more)
src/base/base64/: base64.c
src/base/chars/: genchars.c
src/base/genstrtbl/: main.cpp
src/base/hex/: hex.c
src/benchmark/: fcgi-threaded-hello-world.c  fcgi-zmq-hello-world.c
src/client/: client.c  client.h
src/csdl2c/: csdl2c.c  xml.c  xml.h
src/csdl2c/test/: main.c
src/fcgiauth/: fcgiauth.c
src/fcgiodata/: connection-fcgi.c  connection-fcgi.h  connection.c  connection.h  context.c  context.h  fcgi-interface.c  fcgi_connection.c  fcgiodata-async.c  fcgiodata.c  http.c  odata-interface.c
src/fcgitest/: README.txt  connection.c  connection.h  context.c  context.h  fcgi_connection.c  fcgi_connection.h  fcgitest.c  http.c
src/json/: json.c
src/json2schema/: main.cpp  objects.cpp  objects.h  schema.c
src/odata/: alloc.c  alloc.h  array.c  chars.c  chars.h  compare.c  compare.h  csdl.c  csdl.h  deserialize.c  destructors.c  destructors.h  format.c  format.h  getters.c  getters.h  json.h  jsonarray.c  jsonarray.h  jsonobject.c  jsonobject.h  jsonparser.c  jsonparser.h  name.h  object.c  odata.h  odatacxx.h  odatacxxinlines.h  odatamacros.h  outstream.c  outstream.h  pair.c  pair.h  providerentry.c  providerentry.h  providerentryprint.c  queryoption.c  queryoption.h  result.c  result.h  (+14 more)
src/odata/chars/: chars.c
src/odata/examples/: Manager.json  NetworkService.json
src/odata/providers/check/: checkprovider.c
src/odata/providers/frog/: FrogProvider.cpp  FrogProvider.h  strings.h
src/odata/providers/gadget/: async_gadgetprovider.c  gadgetprovider.c
src/odata/providers/heap/: HeapProvider.cpp  (+1 more)
src/olcli/: olcli.c  options.h
src/phitcli/: options.h  phitcli.c
src/plugins/echo/: echoplugin.c
src/plugins/hello/: helloplugin.c
src/plugins/odata/: odataplugin.c  odataplugin.h  options.h  post.c  post.h  providers.c  providers.h  scope.c  scope.h  webpage.c  webpage.h
src/plugins/ping/: pingplugin.c
src/server/: connection.c  connection.h  context.c  context.h  contextoptions.h  defaultplugin.c  defaultplugin.h  disp.c  disp.h  help.c  help.h  listener.c  listener.h  options.h  plugin.c  plugin.h  server.c  webpage.c  webpage.h
src/tests/: test.h
src/tests/base/: conffile.conf  roles.conf  testbase.c
src/tests/csdl/: testcsdl.c
src/tests/odata/: testodata.c
src/tests/odatacxx/: testodatacxx.cpp
src/tools/base64dec/: base64dec.c
src/tools/base64enc/: base64enc.c
src/tools/bins/: bins.c
src/tools/dlopen/: dlopen.c
src/tools/file2c/: file2c.c
src/tools/gennstr/: gennstr.c
src/tools/octstr/: octstr.c
(+6 files in other folders)
